// ===========================================
// 주문 이벤트 Protobuf 스키마
// ===========================================
// 이 파일에서 Kafka 메시지 구조를 정의합니다.
// 빌드 시 Java 클래스가 자동 생성됩니다.
//
// 생성 위치: build/generated/source/proto/main/java/
// 생성 클래스: OrderCreatedEventProto.OrderCreatedEvent
// ===========================================

syntax = "proto3";

// Java 패키지 설정
package com.practice.common.event;
option java_package = "com.practice.common.event";
option java_outer_classname = "OrderCreatedEventProto";

// ===========================================
// 주문 생성 이벤트
// ===========================================
// 필드 번호 규칙:
// - 1-15: 자주 사용하는 필드 (1바이트 인코딩)
// - 16-2047: 덜 사용하는 필드 (2바이트 인코딩)
// - 절대 변경/재사용 금지!
// ===========================================
message OrderCreatedEvent {
    string order_id = 1;      // 주문 ID (파티션 키로 사용)
    string user_id = 2;       // 사용자 ID
    string product_name = 3;  // 상품명
    int32 quantity = 4;       // 수량
    int64 total_price = 5;    // 총 금액 (원 단위)
    string created_at = 6;    // 생성 시각 (ISO 8601 형식)
}

// ===========================================
// 추후 추가 가능한 이벤트 예시
// ===========================================
// message OrderCompletedEvent {
//     string order_id = 1;
//     string completed_at = 2;
//     string status = 3;
// }